syntax = "proto3";

import "cloudstate/entity_key.proto";

package wirelessmesh;

option java_package = "wirelessmesh";
//option java_outer_classname = "DeviceServiceProtos";

message ActivateDeviceCommand {
    string deviceId = 1 [(.cloudstate.entity_key) = true];
    string customerId = 2;
}

message AssignRoomCommand {
    string deviceId = 1 [(.cloudstate.entity_key) = true];
    string room = 2;
}

message Empty {
}

service DeviceService {
    // One time activation of the router.
    rpc Activate(ActivateDeviceCommand) returns (stream Empty);

    // Assign the router to a location in the home.
    rpc AssignRoom(AssignRoomCommand) returns (stream Empty);
}
