syntax = "proto3";

package wirelessmesh.persistence;

message DeviceActivated {
    string deviceId = 1;
    string customerId = 2;
}

message RoomAssigned {
    string deviceId = 1;
    string room = 2;
}
